<resources>
    <string name="app_name">UnfoundSound</string>
    <string name="description">UnfoundSound is a great place to discover new artists, songs and playlists</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="login_button_text">Login</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_text_view_text">This is the Login Activity.  The user would input their username and password and Login to the Home activity.  Optionally, I would investigate using a 3rd party account authentication API (such as Google or Facebook accounts).  Forgot Password activity may also reside here, although not included in this project structure.  Tap Login to proceed to the Home Activity. </string>
    <string name="sign_up_text_view_text">This is the Sign Up Activity.  The user would create an account and tap Sign Up and would then be taken to the Login Activity.  Proper sign up process should be used, such as email confirmation before logging in, or accounts handled by a 3rd party authentication API (such as Google or Facebook accounts).  </string>
    <string name="search">Search</string>
    <string name="playlists">Playlists</string>
    <string name="trending">Trending</string>
    <string name="nowplaying">Now Playing</string>
    <string name="home_text_view_text">This is the Home Activity.  This is the initial activity after successful login and is the main screen for playing music and viewing artists.  </string>
    <string name="search_text_view_text">This is the Search Activity.  It may contain an EditText View for the user to search artists, songs or albums on UnfoundSound.  Selecting a song, artist, or album will allow the user to play music and transition to the Home activity.</string>
    <string name="playlists_text_view_text">This is the Playlists Activity.  The playlist activity can contain custom user playlists controlled and saved by the user.  Selecting to songs will transition to the Home activity to play.</string>
    <string name="trending_text_view_text">This is the Trending Activity.  This trending activity would contain popular artists, songs or albums that are currently popular based on number of listens, views or high ratings.  Selecting to songs will transition to the Home activity to play.</string>
</resources>
