<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space1"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context="com.ford.zrouse.unfoundsound.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:editTextColor="@android:color/white"
            android:hint="@string/enter_email"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/username_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editTextColor="@android:color/white"
            android:hint="@string/enter_username"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:editTextColor="@android:color/white"
            android:hint="@string/set_password"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:editTextColor="@android:color/white"
            android:hint="@string/confirm_password"
            android:textAlignment="center"
            android:textColorHint="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sign_up_text_view_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up_login_button"
                style="@style/FirstScreenButtonStyle"
                android:text="@string/sign_up_button_text" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
