<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trending"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space1"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context="com.ford.zrouse.unfoundsound.Trending">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_button"
                style="@style/HomeScreenButtonStyle"
                android:text="@string/home" />

            <ImageView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/search_button"
                style="@style/HomeScreenButtonStyle"
                android:text="@string/search" />

            <ImageView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/playlists_button"
                style="@style/HomeScreenButtonStyle"
                android:text="@string/playlists" />

            <ImageView
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />

            <Button
                android:id="@+id/trending_button"
                style="@style/ActiveMenuButtonHighlighting"
                android:text="@string/trending" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <TextView
                style="@style/TextViewTextStyle"
                android:text="@string/trending_text_view_text"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
